--- a/Editor/com.ecasillas.commonutils.editor.asmdef
+++ b/Editor/com.ecasillas.commonutils.editor.asmdef
@@ -1,3 +1,14 @@
-﻿{
-	"name": "com.ecasillas.commonutils.editor"
+{
+    "name": "com.ecasillas.commonutils.editor",
+    "references": [],
+    "optionalUnityReferences": [],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": []
 }
