Created asset organization menus.

--- a/Editor/com.ecasillas.commonutils.editor.asmdef
+++ b/Editor/com.ecasillas.commonutils.editor.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "com.ecasillas.commonutils.editor",
-    "references": [],
+    "references": [
+        "com.ecasillas.commonutils"
+    ],
     "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
