--- a/Runtime/External/PixelPlacement/com.pixelplacement.itween.asmdef
+++ b/Runtime/External/PixelPlacement/com.pixelplacement.itween.asmdef
@@ -1,3 +1,12 @@
-﻿{
-	"name": "com.pixelplacement.itween"
+{
+    "name": "com.pixelplacement.itween",
+    "references": [],
+    "optionalUnityReferences": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": []
 }
