Tweaking the scene autoloader

--- a/Editor/com.ecasillas.commonutils.editor.asmdef
+++ b/Editor/com.ecasillas.commonutils.editor.asmdef
@@ -1,9 +1,9 @@
 {
     "name": "com.ecasillas.commonutils.editor",
     "references": [
-        "com.ecasillas.commonutils"
+        "com.ecasillas.commonutils",
+        "Unity.EditorCoroutines.Editor"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -12,5 +12,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
