Adds TMPro to CommonUtils. Breaking Change: Breaks reference on AbstractSelectionToggle.cs label. To support TMPro and UnityEngine.UI, label was removed, the Init method now calls the protected abstract method "SetLabelText". Two child classes (one for Unity GUI and one for TMPro) are created: AbstractUGUISelectionToggle and AbstractTMPSelectionToggle. IntSelectionToggle and StringSelectionToggle now inherit from AbstractUGUISelectionToggle instead of AbstractSelectionToggle Two new clases, TMPIntSelectionToggle and TMPStringSelectionToggle were created, inheriting from AbstractTMPSelectionToggle.

--- a/Runtime/Scripts/com.ecasillas.commonutils.asmdef
+++ b/Runtime/Scripts/com.ecasillas.commonutils.asmdef
@@ -1,7 +1,8 @@
 {
     "name": "com.ecasillas.commonutils",
     "references": [
-        "com.pixelplacement.itween"
+        "com.pixelplacement.itween",
+        "Unity.TextMeshPro"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [],
