--- a/Demos/UI/SettingsFields/Scripts/com.ecasillas.commonutils.demos.ui.settingsfields.asmdef
+++ b/Demos/UI/SettingsFields/Scripts/com.ecasillas.commonutils.demos.ui.settingsfields.asmdef
@@ -1,15 +1,15 @@
 {
     "name": "com.ecasillas.commonutils.demos.ui.settingsfields",
     "references": [
-        "GUID:453644240d94c4e929b3a593a6ae93d7",
-        "com.ecasillas.commonutils"
+        "GUID:453644240d94c4e929b3a593a6ae93d7"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
