Added root namespace to com.ecasillas.commonutils.editor Moved RenderField to its own file for easier maintenance Included editorconfig

--- a/Editor/com.ecasillas.commonutils.editor.asmdef
+++ b/Editor/com.ecasillas.commonutils.editor.asmdef
@@ -1,5 +1,6 @@
 {
     "name": "com.ecasillas.commonutils.editor",
+    "rootNamespace": "CommonUtils",
     "references": [
         "com.ecasillas.commonutils"
     ],
