--- a/Tests/PlayMode/com.ecasillas.commonutils.playmode.tests.asmdef
+++ b/Tests/PlayMode/com.ecasillas.commonutils.playmode.tests.asmdef
@@ -1,16 +1,22 @@
 {
     "name": "com.ecasillas.commonutils.playmode.tests",
+    "rootNamespace": "CommonUtils",
     "references": [
-        "com.ecasillas.commonutils"
-    ],
-    "optionalUnityReferences": [
-        "TestAssemblies"
+        "com.ecasillas.commonutils",
+        "UnityEngine.TestRunner",
+        "UnityEditor.TestRunner"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
-    "overrideReferences": false,
-    "precompiledReferences": [],
-    "autoReferenced": true,
-    "defineConstraints": []
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "nunit.framework.dll"
+    ],
+    "autoReferenced": false,
+    "defineConstraints": [
+        "UNITY_INCLUDE_TESTS"
+    ],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
