--- a/Tests/Editor/com.ecasillas.commonutils.editor.tests.asmdef
+++ b/Tests/Editor/com.ecasillas.commonutils.editor.tests.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "com.ecasillas.commonutils.editor.tests",
-    "rootNamespace": "",
+    "rootNamespace": "CommonUtils",
     "references": [
         "com.ecasillas.commonutils",
         "UnityEngine.TestRunner",
